<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhatSoup</string>
    <string name="menu">Menu</string>
    <string name="modele">Modele</string>
    <string name="mangeages">Mangeages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_week">Menu</string>
    <string name="title_template">Modele</string>
    <string name="button_generate">Generate</string>
    <string name="button_default">Reset</string>
    <string name="title_basic">Basic</string>
    <string name="title_meals">Meals</string>
    <string name="title_addon">Addon (with basic)</string>
    <string name="button_add">Add</string>
    <string name="title_lists">Listes</string>
    <string name="button_reset">Reset</string>
    <string name="title_nextweek">Prochain</string>
    <string name="button_setweek">SAVE</string>
    <string name="button_getweek">LOAD</string>
    <string name="button_share">SHARE</string>
    <string name="button_generate_meal">GENE</string>
    <string name="button_generate_composition">RATE</string>
</resources>