<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lists_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_meals" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mealRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_add_meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_basic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/simpleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_add_simple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_addon" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/avecRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_add_avec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lists_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/button_reset"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>